--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="button-circle">
-              <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" />
+              <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" ng-click="testingService()" />
             </div>
 
             <div class="button-circle">
