--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -22,15 +22,27 @@ $dark:                            #000000 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // custom color variables
+$red: #B70016;
 $white: #ffffff;
+$cream: #FFF8D9
+$yellow: #FFDB3B;
 $dark-grey: #979797;
 $dark-grey2: #7c7c7c;
+$dark-grey3: #6A7777;
 $light-grey: #b2b2b2;
+$light-grey2: #969696;
+$very-light-grey: #E5E1DF;
 $lime-green: #77ce20;
+$button-dark-blue: #006364;
+$tomato-red-primary: #EA465F
+$manual-minus-pink: #FFE0D4;
 $speak-agent-blue: #50E2E3;
 $speak-agent-dark-blue: #008485;
 $speak-agent-light-blue: #83EFF0;
-
+$speak-agent-light-blue2: #65e5e6;
+$speak-agent-light-blue3: #98e3e3;
+$speak-agent-light-blue4: #73e7e8;
+$speak-agent-light-blue5: #6FCACB;
 
 .color-choice{
   background-color: $white;
@@ -48,7 +60,7 @@ $speak-agent-light-blue: #83EFF0;
 .real-content{
   width: 40%;
   float: right;
-  background:yellow;
+  background:$yellow;
 }
 
 .tile{
@@ -65,11 +77,11 @@ $speak-agent-light-blue: #83EFF0;
 
   &.lightBlue{
     background-color:$speak-agent-light-blue;
-    border-color:white;
+    border-color:$white;
   }
 
   &.white{
-    background-color:white;
+    background-color:$white;
   }
 }
 
@@ -106,7 +118,7 @@ $speak-agent-light-blue: #83EFF0;
   margin-right:30px;
 
   &.ion-locked{
-    color:red;
+    color:$red;
   }
 
   &.ion-unlocked{
@@ -120,7 +132,7 @@ $speak-agent-light-blue: #83EFF0;
 
 .item{
   .green-blue{
-    border-color:#65e5e6;
+    border-color:$speak-agent-light-blue2;
   }
 
   .item-input{
@@ -134,7 +146,7 @@ $speak-agent-light-blue: #83EFF0;
     }
   }
   .item-divider{
-    background-color: #98e3e3;
+    background-color: $speak-agent-light-blue3;
   }
 }
 
@@ -182,7 +194,7 @@ $speak-agent-light-blue: #83EFF0;
   width:70px;
   height:70px;
   border-radius: 15px;
-  background-color:#73e7e8;
+  background-color:$speak-agent-light-blue4;
   float: left;
   position: relative;
   z-index:0;
@@ -193,16 +205,16 @@ $speak-agent-light-blue: #83EFF0;
   width:20px;
   height:20px;
   border-radius:10px;
-  background-color:#FFE0D4;
+  background-color:$manual-minus-pink;
   float: right;
   border-style: solid;
   border-width: 2px;
-  color: #B70016;
+  color: $red;
   margin-top: -10px;
   margin-right: -10px;
 
   p{
-    color:#B70016;
+    color:$red;
     font-size: 3em;
     margin-top: -4px;
   }
@@ -212,8 +224,8 @@ $speak-agent-light-blue: #83EFF0;
   width:10px;
   height:10px;
   border-radius:10px;
-  background-color:#FFDB3B;
-  float:left;
+  background-color: $yellow;
+  float: left;
   margin-top: -6px;
   margin-left: -5px;
 }
@@ -222,13 +234,13 @@ $speak-agent-light-blue: #83EFF0;
   width:15px;
   height:15px;
   border-radius:10px;
-  background-color: #008485;
+  background-color: $speak-agent-dark-blue;
 }
 
 .popover-stuff{
   padding:3px;
   padding-left: 10px;
-  color:#EA465F;
+  color:$tomato-red-primary;
   font-weight: 500;
   font-style: italic;
 }
@@ -240,7 +252,7 @@ $speak-agent-light-blue: #83EFF0;
 }
 
 .closing-x{
-  color:#969696;
+  color:$light-grey2;
   float:right;
   margin-right:10px;
   font-size: 1.25em;
@@ -248,7 +260,7 @@ $speak-agent-light-blue: #83EFF0;
 }
 
 .about-circle{
-  background-color: #FFDB3B;
+  background-color: $yellow;
   width:10px;
   height:10px;
   border-radius: 5px;
@@ -271,7 +283,7 @@ $speak-agent-light-blue: #83EFF0;
   text-align: center;
   
   a{
-    color: black;
+    color: $black;
     text-decoration: none;
   }
 }
@@ -307,7 +319,7 @@ $speak-agent-light-blue: #83EFF0;
   height: 0;
   border-top: 30px solid $speak-agent-blue;
   border-left: 30px solid transparent;
-  float:right;
+  float: right;
   margin:-4px;
   padding:0;
   z-index:3;
@@ -359,13 +371,13 @@ $speak-agent-light-blue: #83EFF0;
 
 .tile-section-border{
   margin-top:12px; 
-  float:left; 
+  float: left; 
   border-right: 2px solid $white;
 }
 
 #board-section{
   margin-top:-20px;
-  float:left; 
+  float: left; 
   /*margin-right:-20px;*/
 }
 
@@ -375,7 +387,7 @@ $speak-agent-light-blue: #83EFF0;
 }
 
 .toggle{
-  float:right;
+  float: right;
 }
 
 .track p{
@@ -383,19 +395,19 @@ $speak-agent-light-blue: #83EFF0;
 }
 
 #home-section{
-  float:right; 
+  float: right; 
   margin-top:12px;
 }
 
 #home-button-section{
-  background:white; 
+  background: $white; 
   padding-left: 15px;
   margin:0;
 }
 
 #btn-styling-buddy .toggle p{
-  float:left;
-  color: white;
+  float: left;
+  color: $white;
   padding:1px;
   font-size: 55%;
   padding-left:4px;
@@ -418,13 +430,13 @@ $speak-agent-light-blue: #83EFF0;
 
 .toggle-note{
   font-size: 8px;
-  color: black;
+  color: $black;
   margin: 30px -3px -8px 0px;
   font-weight: bold;
 }
 
 .annotation{
-  color: #6A7777;
+  color: $dark-grey3;
   padding-left: 4px;
 }
 
@@ -436,15 +448,15 @@ input[type="text"]{
   font-size: 18px;
   box-shadow: none;
   border-radius: none;
-  outline: 1px solid #979797;
+  outline: 1px solid $light-grey2;
 }
 
 input[type="text"]:focus, textarea:focus{
-  background:#FFF8D9;
-  box-shadow: 0 0 5px #6EE8E9;
+  background: $cream;
+  box-shadow: 0 0 5px $speak-agent-light-blue4;
   padding: 3px 0px 3px 3px;
   margin: 5px 1px 3px 0px;
-  border: 1px solid #6EE8E9;
+  border: 1px solid $speak-agent-light-blue4;
   outline:none;
 }
 
@@ -501,18 +513,18 @@ input[type="text"]:focus, textarea:focus{
 .factory-title{
   font-size: 1.75em;
   font-weight: 400;
-  color:#008485;
+  color:$speak-agent-dark-blue;
 }
 
 .board-instructions{
-  color: #008485;
+  color: $speak-agent-dark-blue;
   font-weight: 500;
   margin-bottom: 80px;
   width:90%;
 }
 
 .board-instructions2{
-  color: #008485;
+  color: $speak-agent-dark-blue;
   font-weight: 800;
   font-style:italic;
   margin-bottom: -10px;
@@ -524,14 +536,14 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .custom-button{
-  background-color: #008485;
+  background-color: $speak-agent-dark-blue;
   border-style: solid;
-  border-color: #008485;
+  border-color: $speak-agent-dark-blue;
   border-radius: 20px;
   color: white;
   padding:5px;
   font-weight:600;
-  box-shadow: 0px 3px 0px 0px #006364;
+  box-shadow: 0px 3px 0px 0px $button-dark-blue;
 }
 
 .custom-button a{
@@ -542,9 +554,9 @@ input[type="text"]:focus, textarea:focus{
 .custom-button-inverse{
   background-color: white;
   border-style: solid;
-  border-color: #008485;
+  border-color: $speak-agent-dark-blue;
   border-radius: 20px;
-  color: #008485;
+  color: $speak-agent-dark-blue;
   padding:5px;
   font-weight:600;
   box-shadow: 0px 3px 0px 0px;
@@ -552,11 +564,11 @@ input[type="text"]:focus, textarea:focus{
 
 .centered-title{
   font-size:1em;
-  color:black;
+  color: $black;
   text-align: center;
 }
 .greyed-out{
-  color:#F9F8F8;
+  color: $white;
 }
 
 .checkbox-text{
@@ -564,17 +576,17 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .settings-box.ion-checkbox{
-  border-color: black;
+  border-color: $black;
 }
 .centered-note{
   margin-left:18%;
   font-style: italic;
   font-weight:600;
-  color:#738383;
+  color:$dark-grey3;
 }
 .warning-text{
   margin-left:70px;
-  color:red;
+  color: $red;
 }
 
 #settings-menu{
@@ -582,7 +594,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .settings-box{
-  background-color: white;
+  background-color: $white;
   margin-left: 15%;
   margin-top:5%;
   padding-top:10px;
@@ -607,13 +619,13 @@ input[type="text"]:focus, textarea:focus{
 #settings-modal{
   margin:-5px;
   /*margin-right:-10px;*/
-  background-color: #98E3E3;
+  background-color: $speak-agent-light-blue3;
 }
 
 .avatar-box{
 width:10%;
 height:250px;
-background-color: white;
+background-color: $white;
 float:left;
 }
 
@@ -623,14 +635,14 @@ float:left;
 }
 
 .item.item-divider{
-  background-color: #98E3E3;
+  background-color: $speak-agent-light-blue3;
 }
 
 .avatar-icon-placeholder{
   width:30px;
   height:30px;
   border-radius: 8px;
-  background-color:#E5E1DF;
+  background-color:$very-light-grey;
   float:left;
   position: relative;
   z-index: 5;
@@ -638,7 +650,7 @@ float:left;
 }
 
 #blue-list-item{
-  background-color: #98E3E3;
+  background-color: $speak-agent-light-blue3;
   font-weight: bold;
 } 
 .show-hide-label{
@@ -646,14 +658,14 @@ float:left;
   padding-top: 2px;
   font-size: .75em;
   margin-bottom:-10px;
-  color:#b2b2b2;
+  color:$light-grey;
 }
 
 .button a{
   position:relative;
   z-index:3;
   text-decoration: none;
-  color:#b2b2b2;
+  color:$light-grey;
 }
 
 .done-button{
@@ -661,26 +673,26 @@ float:left;
   float: right;
   border-radius: 20px;
   border-style: solid;
-  border-color: #006E70;
+  border-color: $button-dark-blue;
   p{
-    color:#008485;
+    color:$speak-agent-dark-blue;
     font-weight:bold;
     margin-bottom: -1px;
     margin-left: 5px;
     margin-right: 6px;
   }
   a{
-    color:#008485;
+    color:$speak-agent-dark-blue;
     text-decoration: none;
   }
 }
 
 button.button-outline.button-calm.button-small.selected-btn2{
-  background-color: #6FCACB;
+  background-color: $speak-agent-light-blue5;
   color:white;
   border-radius: 0;
   margin-left: 8px;
-  border-color: #6FCACB;
+  border-color: $speak-agent-light-blue5;
 }
 
 .selected-btn2{
@@ -690,28 +702,28 @@ button.button-outline.button-calm.button-small.selected-btn2{
 .round-button{
   width:120px;
   height:40px;
-  border: 2px solid #979797;
+  border: 2px solid $dark-grey;
   border-radius: 20px;
   float: left;
   text-align: center;
   font-size: 1.5em;
   margin-left: 30%;
   padding-top: 1%;
-  color:#979797;
+  color:$dark-grey;
 
 }
 
 .round-button2{
   width:120px;
   height:40px;
-  border: 2px solid #979797;
+  border: 2px solid $dark-grey;
   border-radius: 20px;
   float: left;
   text-align: center;
   font-size: 1.5em;
   margin-left: 10%;
   padding-top: 1%;
-  color:#979797;
+  color:$dark-grey;
 }
 
 #color-modal-style{
