--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -21,6 +21,244 @@ $dark:                            #000000 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
+a:active {
+  background-color:#579215;
+  border-color:#579215;
+}
+
+.about-circle{
+  background-color: #FFDB3B;
+  width:10px;
+  height:10px;
+  border-radius: 5px;
+}
+
+.about-content{
+  width:70%;
+  margin-left: 15%;
+  margin-top:2%;
+}
+
+.about-question{
+  width:15px;
+  height:15px;
+  border-radius:10px;
+  background-color: #008485;
+}
+
+.about-symbol-select{
+  width:70%;
+  margin-left: 15%;
+  margin-top:2%;
+}
+
+.annotation{
+  color:#6A7777;
+  padding-left:4px;
+}
+
+.avatar-box{
+width:10%;
+height:250px;
+background-color: white;
+float:left;
+}
+
+.avatar-icon-placeholder{
+  width:30px;
+  height:30px;
+  border-radius: 8px;
+  background-color:#E5E1DF;
+  float:left;
+  position: relative;
+  z-index: 5;
+  margin-right:10px;
+}
+
+#blue-list-item{
+  background-color: #98E3E3;
+  font-weight: bold;
+} 
+
+.boards{
+  padding:.5%;
+  height: 70px;
+  width: 70px;
+  font-size: .75em;
+  margin: 4.5px;
+  float: left;
+  text-align: center;
+}
+
+.boards a{
+  color:black;
+  text-decoration: none;
+}
+
+.boardline{
+  height:2px;
+  width: 33px;
+  margin-top:-11px;
+  background-color:#979797;
+  margin-left:10px;
+  -ms-transform: rotate(46deg); /* IE 9 */
+  -webkit-transform: rotate(46deg); /* Safari */
+  transform: rotate(46deg);
+}
+
+.board-factory-placeholder{
+  width:70px;
+  height:70px;
+  border-radius: 15px;
+  background-color:#73E7E8;
+  float:left;
+  position: relative;
+  z-index:0;
+  margin:7px;
+}
+
+.board-factory-tile-section{
+  width:80%;
+  margin-left:11%;
+}
+
+.board-factory-tile-section2{
+  width:90%;
+  margin-left:13%;
+  margin-top: 5%;
+}
+
+.board-instructions{
+  color: #008485;
+  font-weight: 500;
+  margin-bottom: 80px;
+  width:90%;
+}
+
+.board-instructions2{
+  color: #008485;
+  font-weight: 800;
+  font-style:italic;
+  margin-bottom: -10px;
+  width:90%;
+}
+
+#board-section{
+  margin-top:-20px;
+  float:left; 
+}
+
+#bodyBack{
+  background:#008485;
+}
+
+#btn-section{
+  background:#50E2E3; 
+  padding:0;
+}
+
+#btn-styling{
+  border-radius: 0; 
+  margin-left: 8px;
+}
+
+#btn-styling-buddy{
+  border-color: #50E2E3;
+  color: #50E2E3; 
+  border-radius: 0; 
+  margin-left: 8px;
+  width: 20%;
+}
+
+#btn-styling-buddy p{
+  float: left;
+  color: #50E2E3;
+  font-size: 95%;
+}
+
+.button a{
+  position:relative;
+  z-index:3;
+  text-decoration: none;
+  color:#b2b2b2;
+}
+
+button.button-outline.button-calm.button-small.selected-btn2{
+  background-color: #6FCACB;
+  color:white;
+  border-radius: 0;
+  margin-left: 8px;
+  border-color: #6FCACB;
+}
+
+.button.button-outline.button-calm.button-small{
+  border-color:#b2b2b2;
+}
+
+#button-circle{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+  float:left;
+  margin-left:20px;
+}
+
+.button-circle{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+  float:left;
+  margin-left:20px;
+}
+
+#button-circle2{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+}
+
+.buttonsdiv{
+  margin-left: 200px;
+}
+
+#centered-custom-button{
+  margin-left:38%;
+  margin-top: 50px;
+}
+
+#centered-custom-button2{
+  margin-left:34%;
+  margin-top: 30px;
+}
+
+.centered-note{
+  margin-left:18%;
+  font-style: italic;
+  font-weight:600;
+  color:#738383;
+}
+
+.centered-title{
+  font-size:1em;
+  color:black;
+  text-align: center;
+}
+
+.checkbox-text{
+  padding-right: 8px;
+}
+
+.closing-x{
+  color:#969696;
+  float:right;
+  margin-right:10px;
+  font-size: 1.25em;
+  font-weight: 700;
+}
+
 .color-choice{
   background-color: #ffffff;
   padding:.5%;
@@ -29,45 +267,268 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   height:100px;
   width:100px;
   font-size: .75em;
-  margin:8px;
+  margin-left: 60px;
+  margin-bottom: 30px;
   float: left;
   text-align: center;
+}
+
+#color-modal-style{
+  width:80%; 
+  margin-left:-10%; 
+  /*height:80%; */
+  height: 80%;
+  margin-top:-5%;
+  opacity:.9;
+  padding-left: -25px;
+}
+
+#color-modal-style h1{
+  font-weight:bold;
+  text-align: center;
+}
+
+.custom-button{
+  background-color: #008485;
+  border-style: solid;
+  border-color: #008485;
+  border-radius: 20px;
+  color: white;
+  padding:5px;
+  font-weight:600;
+  box-shadow: 0px 3px 0px 0px #006364;
+}
+
+.custom-button a{
+  color:white;
+  text-decoration: none;
+}
+
+.custom-button-inverse{
+  background-color: white;
+  border-style: solid;
+  border-color: #008485;
+  border-radius: 20px;
+  color: #008485;
+  padding:5px;
+  font-weight:600;
+  box-shadow: 0px 3px 0px 0px;
+}
+
+.done-button{
+  background-color: white;
+  /*margin-right: 2%;*/
+  /*margin-left: 1%;*/
+  float:right;
+  border-radius: 20px;
+  border-style: solid;
+  /*border-color: #50E2E3;*/
+  border-color: #006E70;
+}
+
+.done-button a{
+  color:#008485;
+  text-decoration: none;
+}
+
+.done-button p{
+  color:#008485;
+  font-weight:bold;
+  margin-bottom: -1px;
+  margin-left: 5px;
+  margin-right: 6px;
+}
+
+#edit-input-section{
+  padding:35px;
+}
+
+.edit-title{
+  font-size: 1.25em;
+  text-align:center;
+  font-weight: bold;
+  padding-bottom: 15px;
+}
+
+.edit-subheading{
+  font-style: italic;
+  margin-bottom: 1px;
+}
+
+.factory-title{
+  font-size:  1.75em;
+  font-weight:400;
+  color:#008485;
+}
+
+.forward-buttons{
+  padding-top: 5%;
+  margin-left: 49%;
+}
+
+#full-body{
+  background: #50E2E3;
+}
+
+.greyed-out{
+  color:#F9F8F8;
+}
+
+#handle-color{
+  background-color: #77CE20;
+}
+
+.icon.ion-close-round{
+  color:#979797;
+  float:right;
+  font-size: 1.5em;
+}
+
+.icon.ion-gear, .icon.ion-grid, .icon.ion-eye-disabled, .hide-label{
+  color:#b2b2b2;
+}
+
+.icon.ion-help{
+  position:fixed;
+  font-size:.8em;
+  color:white;
+  padding: 0px 8px 0px 8px;
+  border-radius: 10px;
+  background-color: #008485;
+  margin-top: -10px;
+}
+
+.icon.ion-ios-arrow-left{
+  font-size: 2em;
+  color: #7C7C7D;
+}
+
+.icon.ion-locked{
+  font-size:2.5em;
+  color:red;
+  margin-right:30px;
+}
+
+.icon.ion-unlocked{
+  font-size:2.5em;
+  color:#77CE20;
+  margin-right:30px;
+}
+
+input[type="text"]{
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 18px;
+  box-shadow: none;
+  border-radius: none;
+  outline: 1px solid #979797;
+}
+
+input[type="text"]:focus, textarea:focus{
+  background:#FFF8D9;
+  box-shadow: 0 0 5px #6EE8E9;
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid #6EE8E9;
+  outline:none;
+}
+
+.ion-help-circled{
+  color: #008485;
+}
+
+.item.green-blue{
+  border-color:#65E5E6;
+}
+
+.item.item-divider{
+  background-color: #98E3E3;
+}
+
+.item.item-input{
+  padding: 0px;
+  margin-top: -2px;
+}
+
+.item.item-input.none{
+  outline:none;
+  border-style: none;
+  margin: -16px;
+}
+
+.list-container{
+  float:right;
+  width:90%;
+}
+
+.manual-minus{
+  width:20px;
+  height:20px;
+  border-radius:10px;
+  background-color:#FFE0D4;
+  float:right;
+  border-style: solid;
+  border-width: 2px;
+  color:#B70016;
+  margin-top: -10px;
+  margin-right: -10px;
+}
+
+.manual-minus p{
+  color:#B70016;
+  font-size: 3em;
+  margin-top: -4px;
+}
+
+.more-inputs{
+  margin: -10px;
+}
+
+.modal-container{
+  margin:70px;
+}
+
+.modal-note{
+  font-style: italic;
+  padding-left: 30px;
+}
+
+#newboard{
+  padding:0px;
+}
+
+#newboard2{
+  padding:10px 30px 30px 25px;
+}
+
+.new-board-placeholder{
+  height:650px;
+  padding-right: -20px;
+  width:90%;
+  position:relative;
+  z-index:5;
+}
+
+.popover-stuff{
+  padding:3px;
+  padding-left: 10px;
+  color:#EA465F;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.popover-stuff2{
+  border-radius: 10px !important;
+  height:95px !important;
+  width:250px !important;
 }
 
 .real-content{
   width: 40%;
   float: right;
   background:yellow;
-}
-
-.tile{
-  background-color: #ffffff;
-  padding:.5%;
-  border: 2px solid #979797;
-  border-radius: 12px;
-  height:70px;
-  width:70px;
-  font-size: .75em;
-  margin:8px;
-  float: left;
-  text-align: center;
-}
-
-.word-builder{
-  height:100px;
-  margin:10px;
-}
-
-.boards{
-  background-color: #ffffff;
-  padding:.5%;
-  height:70px;
-  width:70px;
-  font-size: .75em;
-  margin:8px;
-  float: left;
-  border: 2px solid #979797;
-  text-align: center;
 }
 
 .regulars{
@@ -84,8 +545,215 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   text-align: center;
 }
 
-.appBody{
-  /*background: #50E2E3;*/
+#regularRow{
+  margin:0; 
+  padding:0;
+}
+
+#regularRowBod{
+  height: 620px;
+}
+
+.replace-search{
+  height:250px;
+}
+
+.replace-search2{
+  height:150px;
+}
+
+.round-button{
+  width:120px;
+  height:40px;
+  border: 2px solid #979797;
+  border-radius: 20px;
+  float:left;
+  text-align: center;
+  font-size: 1.5em;
+  margin-left: 30%;
+  padding-top: 1%;
+  color:#979797;
+
+}
+
+.round-button2{
+  width:120px;
+  height:40px;
+  border: 2px solid #979797;
+  border-radius: 20px;
+  float:left;
+  text-align: center;
+  font-size: 1.5em;
+  margin-left: 10%;
+  padding-top: 1%;
+  color:#979797;
+}
+
+#selected-btn, #selected-btn a, #selected-btn i{
+  background-color: #6FCACB;
+  color:white;
+  border-radius: 0;
+  margin-left: 8px;
+  border-color: #6FCACB; 
+}
+
+.selected-btn2{
+  color:white;
+}
+
+.selected-btn2, .selected-btn2 a, .selected-btn2 i{
+  color:white;
+}
+
+.settings-box{
+  background-color: white;
+  margin-left: 15%;
+  margin-top:5%;
+  padding-top:10px;
+  padding-bottom:10px;
+  padding-left: 30px;
+  font-size: 1.2em;
+  width:70%;
+}
+
+.settings-box.ion-checkbox{
+  border-color: black;
+}
+
+#settings-menu{
+  margin:-10px;
+}
+
+#settings-modal{
+  margin:-5px;
+  /*margin-right:-10px;*/
+  background-color: #98E3E3;
+}
+
+.show-hide-label{
+  margin-top:-25px;
+  padding-top: 2px;
+  font-size: .75em;
+  margin-bottom:-10px;
+  color:#b2b2b2;
+  /*color:#50E2E3;*/
+}
+
+.tile{
+  background-color: #ffffff;
+  padding:.5%;
+  border: 2px solid #979797;
+  border-radius: 12px;
+  height:74px;
+  width:74px;
+  font-size: .75em;
+  margin:3px;
+  float: left;
+  text-align: center;
+}
+
+.tile2 {
+  background-color: #73E7E8;
+  padding: .5%;
+  border-radius: 12px;
+  height: 74px;
+  width: 74px;
+  font-size: .75em;
+  margin: 3px;
+  float: left;
+  text-align: center; 
+}
+
+.tile.white{
+  background-color:white;
+}
+
+#tile-section{
+  margin-top:-33px; 
+  float: left; 
+}
+
+.tile-section-border{
+  margin-top:12px; 
+  float:left; 
+  border-right: 2px solid #ffffff;
+}
+
+.tile.selectedColor {
+    background-color: #000;
+}
+
+.title.lightBlue{
+  background-color:#83EFF0;
+  border-color:white;
+}
+
+.title-section, .symbol-section, .tag-section{
+  padding-bottom:20px;
+}
+
+.toggle{
+  float: right;
+}
+
+.toggle.toggle-dark-green input:checked + .track {
+  border-color: #006D6F;
+  background-color: #006D6F; 
+  /*width:10px;*/
+  height:15px;
+  float:left;
+  margin-bottom: 5px;
+}
+
+.toggle.toggle-dark-green input + .track{
+  height:15px;
+  background-color: #979797;
+  border-color: #979797;
+}
+
+.toggle.toggle-dark-green.toggle-small{
+  position:relative; 
+  z-index:3; 
+  margin-top:1px; 
+  margin-left:2px; 
+  margin-bottom:-20px;
+}
+
+.toggle-note{
+  font-size: 8px;
+  color: black;
+  margin:-30px -3px -8px 0px;
+  font-weight: bold;
+}
+
+.top-button{
+  position:absolute; 
+  margin:42% 30% 30% 39%;
+}
+
+.track p{
+  font-size:50%;
+}
+
+.triangle-topright {
+  width: 0;
+  height: 0;
+  border-top: 30px solid #50E2E3;
+  border-left: 30px solid transparent;
+  float: right;
+  margin:-4px;
+  padding:0;
+  z-index:3;
+}
+
+.warning-text{
+  margin-left:70px;
+  color:red;
+}
+
+.word-builder{
+  height:100px;
+  margin:10px;
 }
 
 .word-builder-input{
@@ -96,125 +764,44 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   border:1px solid #979797;
 }
 
-.triangle-topright {
-  width: 0;
-  height: 0;
-  border-top: 30px solid #50E2E3;
-  border-left: 30px solid transparent;
-  float:right;
-  margin:-4px;
-  padding:0;
-  z-index:3;
-
-}
-
-#btn-styling{
-  border-color:#50E2E3;
-  color:#50E2E3; 
-  border-radius:0; 
-  margin-left:8px;
-}
-
-#btn-styling-buddy{
-  border-color:#50E2E3;
-  color:#50E2E3; 
-  border-radius:0; 
-  margin-left:8px;
-  width:20%;
-}
-#btn-styling-buddy p{
+.yellow-dot{
+  width:10px;
+  height:10px;
+  border-radius:10px;
+  background-color:#FFDB3B;
   float:left;
-  color:#50E2E3;
-  font-size: 95%;
+  margin-top: -6px;
+  margin-left: -5px;
 }
 
-#bodyBack{
-  background:#008485;
-}
+// #home-section{
+//   float:right; 
+//   margin-top:12px;
+// }
 
-#regularRow{
-  margin:0; 
-  padding:0;
-}
+// #home-button-section{
+//   background:white; 
+//   padding-left: 15px;
+//   margin:0;
+// }
 
-#regularRowBod{
-  height: 620px;
-}
+// #btn-styling-buddy .toggle p{
+//   float:left;
+//   color: white;
+//   padding:1px;
+//   font-size: 55%;
+//   padding-left:4px;
+// }
 
-#tile-section{
-  margin-top:-33px; 
-  float:left; 
-  /*border-right: 2px solid #ffffff;*/
-}
-
-.tile-section-border{
-  margin-top:12px; 
-  float:left; 
-  border-right: 2px solid #ffffff;
-}
-
-#board-section{
-  margin-top:-20px;
-  float:left; 
-  /*margin-right:-20px;*/
-}
-
-#btn-section{
-  background:#50E2E3; 
-  padding:0;
-}
-
-.toggle{
-  float:right;
-}
-
-.track p{
-  font-size:50%;
-}
-
-#home-section{
-  float:right; 
-  margin-top:12px;
-}
-
-#home-button-section{
-  background:white; 
-  padding-left: 15px;
-  margin:0;
-}
-
-#btn-styling-buddy .toggle p{
-  float:left;
-  color: white;
-  padding:1px;
-  font-size: 55%;
-  padding-left:4px;
-}
-
-#full-body{
-  background: #50E2E3;
-}
-
-.boardline{
-  height:2px;
-  width: 43px;
-  margin-top:-11px;
-  background-color:#979797;
-  margin-left:28px;
-  -ms-transform: rotate(46deg); /* IE 9 */
-  -webkit-transform: rotate(46deg); /* Safari */
-  transform: rotate(46deg);
-}
-
-.toggle-small 
-	  .handle {
-	  top: 5px;
-	  left: 4px;
-	  width: 20px;
-	  height: 15px;
-	  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); 
-	}
-}
+// .toggle-small 
+// 	  .handle {
+// 	  top: 5px;
+// 	  left: 4px;
+// 	  width: 20px;
+// 	  height: 15px;
+// 	  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); 
+// 	}
+// }
 
 
 // Include all of Ionic
