fixed minor sass compilation errors but still not getting new master sass content

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -24,7 +24,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // custom color variables
 $red: #B70016;
 $white: #ffffff;
-$cream: #FFF8D9
+$cream: #FFF8D9;
+$black: #000000;
 $yellow: #FFDB3B;
 $dark-grey: #979797;
 $dark-grey2: #7c7c7c;
@@ -34,7 +35,7 @@ $light-grey2: #969696;
 $very-light-grey: #E5E1DF;
 $lime-green: #77ce20;
 $button-dark-blue: #006364;
-$tomato-red-primary: #EA465F
+$tomato-red-primary: #EA465F;
 $manual-minus-pink: #FFE0D4;
 $speak-agent-blue: #50E2E3;
 $speak-agent-dark-blue: #008485;
