--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -2,15 +2,16 @@
       <div class="buttonsdiv">
         <i class="icon ion-unlocked"></i>
 
-        <button class="button button-outline button-calm button-small" id="btn-styling">
-          <a href="#/settings"><i class="icon ion-gear-b"></i> Settings</a>
-        </button>
+        <a href="#/settings" class="button button-outline button-calm button-small" id="btn-styling">
+            <i class="icon ion-gear-b"></i> Settings
+        </a>
 
-        <button class="button button-outline button-calm button-small" id="btn-styling">
-          <i class="icon ion-grid"></i><a href="#/board_factory"> Board Factory</a>
+        <a href="#/board_factory" class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-grid"></i>
+          Board Factory
           <br>
           <p class="show-hide-label">*Requires Wifi</p>
-        </button>
+        </a>
 
         <button class="button button-outline button-calm button-small" id="btn-styling" ng-click="activeHide()" ng-class="class">
           <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == true"></i>
