--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -2,11 +2,11 @@
       <div class="buttonsdiv">
         <i class="icon ion-unlocked"></i>
 
-        <a href="#/settings" class="button button-outline button-calm button-small" id="btn-styling">
+        <a href="#/settings" class="button button-outline button-small" id="btn-styling">
             <i class="icon ion-gear-b"></i> Settings
         </a>
 
-        <a href="#/board_factory" class="button button-outline button-calm button-small" id="btn-styling">
+        <a href="#/board_factory" class="button button-outline button-small" id="btn-styling">
           <i class="icon ion-grid"></i>
           Board Factory
           <br>
@@ -16,7 +16,8 @@
         <button class="button button-outline button-calm button-small" id="btn-styling" ng-click="activeHide()" ng-class="class">
           <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == true"></i>
           <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == false" style="color:white;"></i>
-          <span class="hide-label" ng-show="selectedBtn2 == true">Hide Tiles</span><span ng-show="selectedBtn2 == false">Hide Tiles</span>
+          <span class="hide-label" ng-show="selectedBtn2 == true">Hide Tiles</span>
+          <span class="hide-label2" ng-show="selectedBtn2 == false">Hide Tiles</span>
 
           <div class="toggle-content" style="float:right">
             <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
